--- a/entrega4/src/views/realTimeProducts.handlebars
+++ b/entrega4/src/views/realTimeProducts.handlebars
@@ -1,28 +1,28 @@
 <div>
-    <h2>Agragar productos</h2>
+    <h2>Agregar productos</h2>
     <form>
         <label>Titulo</label><br>
         <input type="text" name="title" id="title"><br>
 
-        <label></label><br>
+        <label>Descripcion</label><br>
         <input type="text" name="description" id="description"><br>
 
-        <label></label><br>
+        <label>Code</label><br>
         <input type="number" name="code" id="code"><br>
 
-        <label></label><br>
+        <label>Precio</label><br>
         <input type="number" name="price" id="price"><br>
 
-        <label></label><br>
+        <label>Status</label><br>
         <input type="text" name="status" id="status"><br>
 
-        <label></label><br>
+        <label>Stock</label><br>
         <input type="number" name="stock" id="stock"><br>
 
-        <label></label><br>
+        <label>Categoria</label><br>
         <input type="text" name="category" id="category"><br>
 
-        <label></label><br>
+        <label>Imagen</label><br>
         <input type="text" name="thumbnail" id="thumbnail"><br>
 
         <input type="submit" id="submitproduct">
@@ -41,5 +41,3 @@
 </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="../public/js/index.js"></script>
-{{!-- <script src="/socket.io/socket.io.js"></script>
-<script src="/entrega4/src/public/"></script> --}}
