--- a/entrega4/src/views/home.handlebars
+++ b/entrega4/src/views/home.handlebars
@@ -1,8 +1,8 @@
 <div>
-    <h2>Todos los productos</h2>
+    <h1>Todos los productos</h1> <a href="/realtimeproducts"><h3>RealTimeProducts</h3></a>
     {{#each productos}}
         <div>
-            <h3>{{this.title}}</h3>
+            <h2>{{this.title}}</h2>
             <p>{{this.description}}</p>
             <p>{{this.category}}</p>
             <p>{{this.stock}}</p>
