--- a/entrega4/src/views/realTimeProducts.handlebars
+++ b/entrega4/src/views/realTimeProducts.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <h2>Agregar productos</h2>
+    <h2>Agregar productos</h2> <a href="/">Home</a>
     <form>
         <label>Titulo</label><br>
         <input type="text" name="title" id="title"><br>
@@ -35,9 +35,9 @@
         <input type="submit" id="deleteProduct">
     </form>
 
-    <h2>Todos lod productos</h2>
+    <h2>Todos los productos</h2>
 
     <div id="container"></div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../public/js/index.js"></script>
+<script src="/public/js/index.js"></script>
