--- a/entrega4/src/views/realTimeProducts.handlebars
+++ b/entrega4/src/views/realTimeProducts.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <h2>Agregar productos</h2> <a href="/">Home</a>
+    <h2>Agregar productos</h2> <a href="/products">Productos</a>
     <form>
         <label>Titulo</label><br>
         <input type="text" name="title" id="title"><br>
